# pytest-tui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pytest-WTF.txt  README.md  RELEASE_INSTRUCTIONS  ansi_decoder.py  log_config.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  test_error.py  testrun.html  tox.ini  tui_qt6.py
demo-tests/: conftest.py  html_post_process.py  test_0.py  test_1.py  test_2.py  test_basic.py  test_class.py  test_debug_logger_html.py  test_errors.py  test_fold_loglevel.py  test_fold_pytesthtml.py  test_fold_regex.py  test_hoefling.py  test_issue_1004.py  test_logging.py  test_me.py  test_my_loggers.py.deleteme  test_random_results.py  test_regex.py  test_rerun.py  test_rerun_fixed.py  test_rerun_random.py  test_single_xpass_xfail.py  test_sleep.py  test_tui_logger.py  test_tui_logger_a.py  test_tui_logger_labyrinth.py  test_warnings.py  test_xpass_xfail.py
misc/: Pytest-WTF.txt  RELEASE_INSTRUCTIONS  outcome_questions.txt
pytest_fold/: plugin.py  tui_textual1.py  tui_textual2.py  utils.py
pytest_tui/: Tk_mvc.py  Untitled-1.py.ansi  __init__.py  __main__.py  _tree_control.py  data.py  emails.txt  gui.py  gui_qt6.py  gui_tkinter.py  html.py  html1.py  html2.py  html_gen.py  nonprintable_​​characters.txt  observations  plugin.py  styles.css  tree_control.py  tui.ui  tui1.py  tui2.py  tui3.py  tui_gen.py  tui_logger.py  tui_pytermtk.py  tui_textual1.py  tui_textual2.py  tui_textual_tabs.py  tuih.py  unmarked_output.ans  utils.py
pytest_tui_files/: config.ini
reqts/: requirements-dev.txt  (+2 more)
(+59 files in other folders)
